//
//  CalculatorUITests.swift
//  CalculatorUITests
//
//  Created by Sean Egger and Tony Calarese on 3/22/19.
//  Copyright © 2019 Sean Egger. All rights reserved.
//

import XCTest
class CalculatorUITests: XCTestCase {
    
    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        let app = XCUIApplication()
        let aVal = app.textFields["aVal"]
        let bVal = app.textFields["bVal"]
        let op = app.textFields["op"]
        let answerField = app.staticTexts["answerLabel"]
        aVal.tap()
        aVal.typeText("1")
        bVal.tap()
        bVal.typeText("2")
        op.tap()
        op.typeText("+")
        app.buttons["Calculate"].tap()
        let answer: String = answerField.label
        XCTAssertEqual(answer, "3.0")
    }
    
    func testAdd() {
        
        let app = XCUIApplication()
        
    }

}
